istio/virtualservice/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: zpf
spec:
  hosts:
    - "my.test.com"
  gateways:
    - test-gateway
  http:
    - match:
        - uri:
            prefix: /consumer
      route:
        - destination:
            host: test-consumer
      fault:
        abort:
          httpStatus: 400
          percentage:
            value: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-provider
  namespace: zpf
spec:
  hosts:
    - test-provider
  http:
    - route:
        - destination:
            host: test-provider
            subset: v1
          weight: 0
        - destination:
            host: test-provider
            subset: v2
          weight: 100
      fault:
        delay:
          fixedDelay: 5s
          percent: 100
